# future-number

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-lint.yml
src/future_number/: __init__.py
src/future_number/models/: __init__.py  base.py  operators.py  protocols.py
tests/: test_instantiation.py
